Update table headers

--- a/0001.md
+++ b/0001.md
@@ -171,7 +171,8 @@ Vetting an idea publicly before going as far as writing a detailed ZIP specifica
 ## Stage 2 - PUBLIC DEBATE & REVISION
 ![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-3.png?raw=true)
 
-| --- | --- |
+| Step | Description |
+| :--- | :--- |
 |**Stage Content**|Public discourse on the merit and feasibility of the ZIP proposal.|
 |**Exit Criteria**|Author has gauged community interest and support for the proposal has been sufficient to merit finding a sponsoring Pillar.|
 
@@ -198,7 +199,8 @@ Before drafting an official ZIP, the author will have to identify a Pillar willi
 ## Stage 3 - OFFICIAL ZIP PROPOSAL
 ![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-4.png?raw=true)
 
-| --- | --- |
+| Step | Description |
+| :--- | :--- |
 |**Stage Content**| \- ZIP publication in sponsoring Pillar’s Git repository <br>\- ZIP indexing by Community Pointer Repo <br>\- Spork submission through AZ contract <br>\- ZIP Finalization in case of Informational (text) or Implementation (code) ZIP|
 |**Exit Criteria**|- Author has found a sponsoring Pillar that has publicly announced ZIP sponsorship by adding the draft ZIP to its public repo. <br>\-  Informational / Implementation ZIP has been finalized, or Spork has been proposed through the modified AZ contract (the new Spork contract address)|
 
@@ -309,7 +311,8 @@ Some Informational ZIPs may also have a status of "Active" if they are never mea
 ## Stage 4 - SPORK CREATION
 ![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-8.png?raw=true)
 
-| --- | --- |
+| Step | Description |
+| :--- | :--- |
 |**Stage Content**|- Spork creation via AZ address <br>- Community Acceptance signaling via signed messages<br>- ZIP Acceptance Vote via modified AZ contract|
 |**Exit Criteria**|Pillar Acceptance quorum reached / not reached within voting timeframe|
 
@@ -339,7 +342,8 @@ If the Acceptance vote passes, it is a signal to the community developers that P
 ## Stage 5 - IMPLEMENTATION DISTRIBUTION
 ![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-9.png?raw=true)
 
-| --- | --- |
+| Step | Description |
+| :--- | :--- |
 |**Stage Content**|- Reference implementation<br>\- Downloadable binaries|
 |**Exit Criteria**|Reference implementation published on sponsoring Pillar Git repo|
 
@@ -361,7 +365,8 @@ Anyone can also merge in the changes into their repo copies and build themselves
 ## Stage 6 - COMMUNITY AUDIT
 ![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-10.png?raw=true)
 
-| --- | --- |
+| Step | Description |
+| :--- | :--- |
 |**Stage Content**|Audit timeframe & community feedback|
 |**Exit Criteria**|Timeout of audit timeframe|
 
@@ -374,7 +379,8 @@ Community members may comment on the implementation or directly push changes via
 ## Stage 7 - PILLARS UPGRADE NODES & VOTE
 ![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-11.png?raw=true)
 
-| --- | --- |
+| Step | Description |
+| :--- | :--- |
 |**Stage Content**|Call to Pillars to signal ZIP implementation support|
 |**Exit Criteria**|ZIP activation lock-in by reaching the activation vote quorum threshold|
 
@@ -387,7 +393,8 @@ What happens if the Spork fails to activate in time? ZIP Sponsors will have to a
 ## Stage 8 - SPORK ACTIVATION
 ![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-12.png?raw=true)
 
-| --- | --- |
+| Step | Description |
+| :--- | :--- |
 |**Stage Content**|Spork activation is triggered|
 |**Exit Criteria**|ZIP is activated|
 
