--- a/0002.md
+++ b/0002.md
@@ -15,7 +15,7 @@
 
 Hash(ed) Time Lock(ed) Contracts allow for contingent payments based on knowledge of the preimage of a hash. If locked funds are not unlocked by a specified expiration time (the timelock), the creator of the HTLC can then reclaim the funds.
 
-In this ZIP we propose supporting HTLCs through a new spork-activated embedded contract with an additional corresponding json-rpc api endpoint.
+In this ZIP we propose supporting HTLCs through a new spork-activated embedded contract with an additional corresponding json-rpc api namespace.
 
 We also implement an account-level toggle-able feature called ProxyUnlock, where other users can unlock HTLCs on behalf of the hashlocked user while the funds are still sent to the hashlocked address. We propose the feature to be enabled by default.
 
