--- a/0002.md
+++ b/0002.md
@@ -90,7 +90,7 @@ JSON ABI:
 
 ## RPC Methods
 
-**RPC endpoint:** `embedded.htlc`
+**RPC namespace:** `embedded.htlc`
 
 ### embedded.htlc.getById
 
