--- a/0002.md
+++ b/0002.md
@@ -15,7 +15,7 @@
 
 Hash(ed) Time Lock(ed) Contracts allow for contingent payments based on knowledge of the preimage of a hash. If locked funds are not unlocked by a specified expiration time (the timelock), the creator of the HTLC can then reclaim the funds.
 
-In this ZIP we propose supporting HTLCs through a new spork-activated embedded contract with an additional corresponding json-rpc api endpoint.
+In this ZIP we propose supporting HTLCs through a new spork-activated embedded contract with an additional corresponding json-rpc api namespace.
 
 We also implement an account-level toggle-able feature called ProxyUnlock, where other users can unlock HTLCs on behalf of the hashlocked user while the funds are still sent to the hashlocked address. We propose the feature to be enabled by default.
 
@@ -43,7 +43,7 @@ JSON ABI:
 
 ### Reclaim
 
-`Reclaim` specifies an HTLC id can only be called (and confirmed by a Pillar) by the creator of an HTLC after it has expired. An HTLC is expired if the timestamp of the confirming momentum is greater or equal to the specified expirationTime. It returns the ZTS token amount that was sent during the Create method call. The method costs the standard "Embedded Withdraw" plasma amount of 3.5 * 21000.
+`Reclaim` specifies an HTLC id and can only be called (and confirmed by a Pillar) by the creator of an HTLC after it has expired. An HTLC is expired if the timestamp of the confirming momentum is greater or equal to the specified expirationTime. It returns the ZTS token amount that was sent during the Create method call. The method costs the standard "Embedded Withdraw" plasma amount of 3.5 * 21000.
 
 JSON ABI:
 ```
@@ -90,7 +90,7 @@ JSON ABI:
 
 ## RPC Methods
 
-**RPC endpoint:** `embedded.htlc`
+**RPC namespace:** `embedded.htlc`
 
 ### embedded.htlc.getById
 
@@ -231,7 +231,7 @@ Methods that don't result in additional transactions use the standard "Embedded 
 
 ### No RPC list methods
 
-Because HTLCs can be withdrawn by two users, the creator and the hashLocked user, there is no natural way to store them in a way that is iterable by address without additional indexing that is non-essential to the Create, Reclaim/Unlock flow. As such these methods are not included in this proposal, but may feature in future proposals around pruna  ble indexes.
+Because HTLCs can be withdrawn by two users, the creator and the hashLocked user, there is no natural way to store them in a way that is iterable by address without additional indexing that is non-essential to the Create, Reclaim/Unlock flow. As such these methods are not included in this proposal, but may feature in future proposals around prunable indexes.
 
 
 # Reference Implementation
